--- a/Css/style.css
+++ b/Css/style.css
@@ -1,15 +1,40 @@
 
+/* NAV */
+
 .dropdownmenu ul, .dropdownmenu li 
 {
     display: flex;
     justify-content: center;
     background-color: rgb(136, 136, 136);
+    padding: 0%;
+    margin: .5%;
 }
 
 .dropdownmenu li 
 {
     list-style: none;
-    margin: 5px;
-    padding: 5px;
+    flex: .15;
+    height: 40px;
     background-color: rgb(202, 202, 202);
+    border-style: solid;
+    border-color: rgb(87, 87, 87);
 }
+
+.dropdownmenu li a 
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 0 auto;
+    color: #000000;
+    text-decoration: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.dropdownmenu ul :hover
+{
+    background-color: #ffffff;
+    transition: .5s;
+}
+
+/* BODY */
