--- a/Css/style.css
+++ b/Css/style.css
@@ -1,40 +1,106 @@
+* 
+{
+    margin: 0;
+    padding: 0;
+}
 
 /* NAV */
 
-.dropdownmenu ul, .dropdownmenu li 
+.navigation
 {
-    display: flex;
-    justify-content: center;
-    background-color: rgb(136, 136, 136);
-    padding: 0%;
-    margin: .5%;
+    font-family: raleway;
+    color: #fff;
+    background-color: rgb(99, 99, 99);
+    text-align: center;
+    padding: .5%;
 }
 
-.dropdownmenu li 
+.navigation ul li a
 {
-    list-style: none;
-    flex: .15;
-    height: 40px;
-    background-color: rgb(202, 202, 202);
-    border-style: solid;
-    border-color: rgb(87, 87, 87);
-}
-
-.dropdownmenu li a 
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: 1 0 auto;
-    color: #000000;
     text-decoration: none;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #000;
 }
 
-.dropdownmenu ul :hover
+.navigation ul li
 {
-    background-color: #ffffff;
+    list-style-type: none;
+    height: 40px;
+    line-height: 40px;
+    flex-basis: 20%;
+    background-color: rgb(158, 156, 156);
+}
+
+.navigation > ul
+{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.navigation > ul > li 
+{
+    margin-left: .5%;
+    margin-right: .5%;
+}
+
+.dropdown li
+{
+    display: none;
+}
+
+.navigation ul li:hover .dropdown li
+{
+    display: block;
+} 
+
+.navigation ul li:hover 
+{
+    background-color: rgb(255, 255, 255);
     transition: .5s;
 }
 
-/* BODY */
+.menuicon
+{
+    display: none;
+    width: 15%;
+    height: 15%;
+}
+
+@media screen and (max-width: 480px) 
+{
+    .navigation > ul
+    {
+        display: block;
+    }
+
+    .navigation > ul > li 
+    {
+        margin-bottom: .5%;
+    }
+
+    .navigation
+    {
+        padding: 1%;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 1024px) 
+{
+    .navigation
+    {
+        padding: 2%;
+    }
+
+    .navigation > ul > li 
+    {
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+
+    .navigation ul li
+    {
+        flex-basis: 28%;
+        height: 60px;
+        line-height: 60px;
+    }
+}
